[package]
name = "ortex"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ortex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.0"
# ort = { version = "2.0.0-rc.2" }
ort = { git = "https://github.com/pykeio/ort/", rev = "634e49a" }
ndarray = "0.15.6"
half = "2.2.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
num-traits = "0.2.15"
log = "0.4.21"
env_logger = "0.11.3"

[features]
# ONNXRuntime Execution providers
directml = ["ort/directml"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
